force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQN-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>