force-app/main/default/objects/Equipment__c/fields/Applicant_Proposal_Association__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Proposal_Association__c</fullName>
    <label>Applicant Proposal Association</label>
    <referenceTo>Applicant_Proposal_Association__c</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>