force-app/main/default/objects/Equipment__c/fields/Contribution_from_other_sources__c.field-meta.xml
<CustomField>
    <fullName>Contribution_from_other_sources__c</fullName>
    <label>Contribution from other sources</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>