force-app/main/default/objects/Equipment__c/fields/Cost_per_Item__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Item__c</fullName>
    <label>Cost per Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>