force-app/main/default/objects/Equipment__c/fields/Maintain_Charges__c.field-meta.xml
<CustomField>
    <fullName>Maintain_Charges__c</fullName>
    <label>Maintain Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>